--- a/Cancer_Wisconsin_2.ipynb
+++ b/Cancer_Wisconsin_2.ipynb
@@ -7,8 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1_7q9NBeLXZpNXSiE9ivDG8WQtQh9vgF6",
-      "authorship_tag": "ABX9TyO9IOZk/+eZhVFtM1vNRI5P",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyO9IOZk/+eZhVFtM1vNRI5P"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,16 +16,6 @@
     "accelerator": "GPU"
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Aman-1701/Cancer_Winconsin/blob/main/Cancer_Wisconsin_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
@@ -137,7 +126,7 @@
         "if __name__ == \"__main__\":\r\n",
         "    print(Graphics_info())"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -169,7 +158,7 @@
       "source": [
         "df=pd.read_csv(\"/content/drive/My Drive/CANCER/data.csv\")"
       ],
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -185,7 +174,7 @@
       "source": [
         "df.head(5)"
       ],
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -470,7 +459,7 @@
         "df.drop(['id'], axis = 1, inplace = True)\n",
         "df.head()"
       ],
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -744,7 +733,7 @@
         "encode = LabelEncoder()\n",
         "df['diagnosis'] = encode.fit_transform(df['diagnosis'])"
       ],
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -760,7 +749,7 @@
         "features = list(df.columns[1:31])\n",
         "len(features)"
       ],
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -784,7 +773,7 @@
       "source": [
         "scaler = StandardScaler()"
       ],
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -804,7 +793,7 @@
       "source": [
         "X_train, X_test, y_train, y_test = train_test_split(df[features], df['diagnosis'].values, test_size=0.15, random_state=0)"
       ],
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -840,7 +829,7 @@
         "\n",
         "classifier.summary()"
       ],
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -884,7 +873,7 @@
       "source": [
         "history=classifier.fit(scaler.fit_transform(X_train.values), np.array(y_train),batch_size = 4,epochs=50,validation_split=0.20)"
       ],
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1006,7 +995,7 @@
       "source": [
         "y_prediction = classifier.predict_classes(scaler.transform(X_test.values))\n"
       ],
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1053,7 +1042,7 @@
         "plt.legend(['Train', 'Validation'], loc='upper left')\n",
         "plt.show()"
       ],
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1103,7 +1092,7 @@
         "plt.savefig('h.png')\n",
         "plt.show()"
       ],
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1158,7 +1147,7 @@
         "\n",
         "print('False Discovery Rate : ', (fp/(tp+fp)))"
       ],
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1192,7 +1181,7 @@
         "from ann_visualizer.visualize import ann_viz;\n",
         "\n"
       ],
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": []
     },
     {
